--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,6 +6,7 @@
 
 html {
   font-size: 10px;
+  overflow-x: hidden;
 }
 
 h2 {
@@ -15,6 +16,10 @@ h2 {
 }
 .invisible {
   display: none;
+}
+.remove_from_view {
+  transform: translateX(2000px);
+  transition: all 1s;
 }
 
 #header {
@@ -84,12 +89,13 @@ main button {
   align-items: center;
   margin: 0.5rem 0;
 
-  border: 1px solid black;
   padding: 1rem;
 
   list-style: none;
   font-size: 2rem;
   font-family: roboto, sans-serif;
+
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .delete_task,
