--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,6 +7,7 @@
 html {
   font-size: 10px;
   overflow-x: hidden;
+  background-image: url("/assets/images/bodyimage.jpg");
 }
 
 .fas {
@@ -17,7 +18,9 @@ h2 {
   font-size: 3.2rem;
   font-weight: 400;
   font-family: roboto, sans-serif;
+  color: white;
 }
+
 .invisible {
   display: none !important;
 }
@@ -72,6 +75,7 @@ main label {
   font-size: 2rem;
   padding-left: 0.5rem;
   font-family: roboto, sans-serif;
+  color: white;
 }
 .prio_container {
   display: flex;
@@ -159,6 +163,9 @@ main button {
   font-family: roboto, sans-serif;
   color: red;
 }
+.inner_task_holder {
+  background-color: rgba(0, 0, 0, 0.25);
+}
 
 #tasks li {
   display: grid;
@@ -188,9 +195,10 @@ input[type="checkbox"] {
 }
 .delete_task,
 .edit_task {
-  color: black;
+  color: white;
   font-size: 3rem;
   border: none;
+  background-color: transparent;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -229,9 +237,9 @@ input[type="checkbox"] {
   /* height: 100px */
   width: 100%;
   overflow-y: hidden;
+  background-color: transparent;
+  color: white;
 }
-
-.dark_theme {
-  background-color: black;
+.prio_text {
   color: white;
 }
