--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -39,7 +39,7 @@ h2 {
   width: 15px;
   border-radius: 50%;
   border: 1px solid black;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   transform: translateX(0%);
   transition: transform 1s;
 }
@@ -62,7 +62,7 @@ h2 {
 #header {
   position: fixed;
   width: 100%;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   z-index: 999;
 }
 #header img {
