--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -95,7 +95,7 @@ main {
   padding: 20rem 5px 0rem 5px;
 
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
 }
 main div:nth-child(2) {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
@@ -231,14 +231,12 @@ input[type="checkbox"] {
   background-color: transparent;
 }
 
-@media only screen and (max-width: 1100px) {
-  main {
-    grid-template-columns: 1fr;
-  }
-}
 @media only screen and (max-width: 550px) {
   .task_item_el {
     flex-direction: column-reverse;
+  }
+  .task_actions {
+    align-self: end;
   }
 }
 
