--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -245,6 +245,9 @@ input[type="checkbox"] {
   h2 {
     font-size: 2.2rem !important;
   }
+  .task_text {
+    font-size: 1.4rem !important;
+  }
 }
 
 .task_list_top_part {
@@ -285,4 +288,5 @@ input[type="checkbox"] {
   width: 100%;
   overflow-y: hidden;
   background-color: transparent;
+  word-break: break-all;
 }
