--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -61,7 +61,8 @@ h2 {
 #header {
   position: fixed;
   width: 100%;
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
+  background-color: inherit;
   z-index: 999;
 }
 #header img {
@@ -236,6 +237,11 @@ input[type="checkbox"] {
   border: none;
   background-color: transparent;
 }
+@media only screen and (min-width: 551px) {
+  h2 {
+    font-size: 2.5rem;
+  }
+}
 
 @media only screen and (max-width: 550px) {
   .task_item_el {
@@ -245,7 +251,7 @@ input[type="checkbox"] {
     align-self: end;
   }
   h2 {
-    font-size: 2.2rem !important;
+    font-size: 1.5rem !important;
   }
   .task_text {
     font-size: 1.4rem !important;
